<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/resultLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterResultsActivity">

    <ImageView
        android:id="@+id/personOutlineImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_person_outline" />

    <TextView
        android:id="@+id/firstNameResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/first_name"
        android:layout_below="@id/personOutlineImage"/>

    <TextView
        android:id="@+id/lastNameResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstNameResult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/last_name" />

    <TextView
        android:id="@+id/emailResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lastNameResult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/email_result" />
</RelativeLayout>